cmake_minimum_required(VERSION 3.17)
project(HazelSolution)

set(CMAKE_CXX_STANDARD 20)

add_subdirectory(Hazel)
add_subdirectory(Sandbox)

message(STATUS "${PROJECT_NAME}: CMAKE_SYSTEM_NAME: ${CMAKE_SYSTEM_NAME}")
message(STATUS "${PROJECT_NAME}: CMAKE_SYSTEM_VERSION: ${CMAKE_SYSTEM_VERSION}")
message(STATUS "${PROJECT_NAME}: CMAKE_CURRENT_BINARY_DIR: ${CMAKE_CURRENT_BINARY_DIR}")
message(STATUS "${PROJECT_NAME}: CMAKE_CURRENT_LIST_DIR: ${CMAKE_CURRENT_LIST_DIR}")
message(STATUS "${PROJECT_NAME}: CMAKE_CXX_COMPILER_ID: ${CMAKE_CXX_COMPILER_ID}")
message(STATUS "${PROJECT_NAME}: CMAKE_CXX_FLAGS: ${CMAKE_CXX_FLAGS}")